# MAI_study

1 course programs/bin_tree/: main.c  tree.h
1 course programs/fractal/: fractal.cpp
1 course programs/queue_implementation/: Makefile  main.c  queue.c  queue.h  sort.c  sort.h
artificial intelligence/lab-perceptron/: README.md  Solution.ipynb  Solution_MyFramework.ipynb
computer graphics/course project/: cp.py
computer graphics/lab1/: lab1.py
computer graphics/lab2/: lab2.py
computer graphics/lab3_4_5/: main.py
computer graphics/lab6/: main.py
computer graphics/lab7/: main.py
cryptography/lab1/: README.md  main.cpp  polard.cpp  task.odt
discrete analysis/: .gitignore
discrete analysis/KP/: main.cpp  t1.txt  t2.txt  t3.txt  t4.txt  t5.txt  test_file.txt  test_gen.cpp
discrete analysis/lab1/: main.cpp
discrete analysis/lab2-3/: main.cpp  task2-3
discrete analysis/lab4/: main.cpp  task4  testnew.cpp
discrete analysis/lab5/: Makefile  SuffTree.cpp  SuffTree.h  main.cpp  pack.sh  task.txt  test.cpp
discrete analysis/lab6/: main.cpp  task.txt
discrete analysis/lab7/: main.cpp  task.txt
discrete analysis/lab8/: main.cpp  (+1 more)
industrial training/: Pipfile  dostoyevsky.txt  example_pelevin  exapmple_dostoevsky  main.py  pelevin.txt
mat mod/: main.ipynb
operation systems/Lab6/: CMakeCache.txt  CMakeLists.txt  Makefile  child_node  child_node.cpp  cmake_install.cmake  lab6  main_node.cpp  server_functions.cpp  server_functions.h
operation systems/Lab6/report/: Lab6_report.odt
system programming/: CMakeLists.txt  main.cpp  task.txt  test.txt
(+347 files in other folders)
